"Add Update Page"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(Libcrypt REQUIRED)
 find_package(KF5NetworkManagerQt REQUIRED)
 find_package(KF5ModemManagerQt REQUIRED)
 find_package(KF5Config)
+find_package(QApt REQUIRED)
 # find_package(QApt REQUIRED)
 
 pkg_search_module(FontConfig REQUIRED fontconfig IMPORTED_TARGET)
@@ -64,6 +65,7 @@ target_link_libraries(${PROJECT_NAME}
         Qt5::Concurrent
         # ::Main
         Qt5::Network
+        QApt::Main
         # LingmoUI
 
         KF5::NetworkManagerQt
