--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: cmake,
                libkf5config-dev,
                modemmanager-qt-dev,
                qtbase5-dev,
+               libqt5webengine5,
                libqt5x11extras5-dev,
                qtdeclarative5-dev,
                qtquickcontrols2-5-dev,
@@ -42,11 +43,11 @@ Depends: qml-module-qtquick-controls2,
          qml-module-qtquick-particles2,
          curl,
          openssl,
+         libqt5webengine5,
          aria2,
          gnupg,
          zenity,
          policykit-1,
-         network-manager,
          libnotify-bin,
          desktop-file-utils,
          liblingmo,
