--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,8 @@ Build-Depends: cmake,
                modemmanager-qt-dev,
                qtbase5-dev,
                libqt5webengine5,
+
+networkmanager,
                libqt5x11extras5-dev,
                qtdeclarative5-dev,
                qtquickcontrols2-5-dev,
