--- a/debian/control
+++ b/debian/control
@@ -17,9 +17,7 @@ Build-Depends: cmake,
                libkf5config-dev,
                modemmanager-qt-dev,
                qtbase5-dev,
-               libqt5webengine5,
-
-networkmanager,
+               libqt5webengine5,networkmanager,
                libqt5x11extras5-dev,
                qtdeclarative5-dev,
                qtquickcontrols2-5-dev,
