--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Build-Depends: cmake,
                modemmanager-qt-dev,
                qtbase5-dev,
                libqt5webengine5,
-               qtwebengine5-dev
+               qtwebengine5-dev,
                network-manager,
                libqt5x11extras5-dev,
                qtdeclarative5-dev,
